Install Hamcrest assertions library

--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,10 @@
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
+        "graze/hamcrest-test-listener": "^3.0",
+        "hamcrest/hamcrest-php": "^2.0",
         "mockery/mockery": "~1.0",
-        "phpunit/phpunit": "~7.0",
+        "phpunit/phpunit": "^6.5",
         "psy/psysh": "^0.9.8"
     },
     "autoload": {
@@ -27,6 +29,9 @@
     "autoload-dev": {
         "classmap": [
             "tests/"
+        ],
+        "files": [
+            "vendor/hamcrest/hamcrest-php/hamcrest/Hamcrest.php"
         ]
     },
     "scripts": {
