--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
     "type": "project",
     "require": {
         "php": ">=7.1.3",
+        "illuminate/redis": "^5.6",
         "laravel/lumen-framework": "5.6.*",
+        "predis/predis": "^1.1",
         "vlucas/phpdotenv": "~2.2"
     },
     "require-dev": {
